--- a/r410-bookmarks/index.html
+++ b/r410-bookmarks/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookmarks</title>
   </head>
@@ -11,4 +11,3 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
